--- a/report.tex
+++ b/report.tex
@@ -1,4 +1,4 @@
-\documentclass[9pt,a4paper]{article}
+\documentclass[10pt,a4paper]{article}
 \usepackage{lastpage}
 \usepackage{fancyhdr}
 \pagestyle{fancy}
@@ -8,146 +8,106 @@
 
 \begin{document}
 \section*{Ds}
-
+\newpage
 \section*{Final Grammar}
-
+{
+\small
 \begin{verbatim}
 program ::= extern_list decl_list
 program ::= decl_list
-
 extern_list ::= extern extern_list'
-
 extern_list' ::= extern extern_list'
 extern_list' ::= ''
-
 extern ::= "extern" type_spec IDENT "(" params ")" ";"
-
 decl_list ::= decl decl_list'
-
 decl_list' ::= decl decl_list'
 decl_list' ::= ''
-
 decl ::= var_type IDENT decl'
 decl ::= "void" IDENT "(" params ")" block
-
 decl' ::= "(" params ")" block
 decl' ::= ";"
-
 type_spec ::= "void"
 type_spec ::= var_type
-
 var_type  ::= "int"
 var_type ::= "float"
 var_type ::= "bool"
-
 params ::= param_list
 params ::= "void"
 params ::= ''
-
 param_list ::= param param_list'
-
 param_list' ::= "," param param_list'
 param_list' ::= ''
-
 param ::= var_type IDENT
-
 block ::= "{" local_decls stmt_list "}"
-
 local_decls ::= local_decl local_decls
 local_decls ::= ''
-
 local_decl ::= var_type IDENT ";"
-
 stmt_list ::= stmt stmt_list'
 stmt_list ::= ''
-
 stmt_list' ::= stmt stmt_list'
 stmt_list' ::= ''
-
 stmt ::= expr_stmt
 stmt ::= block
 stmt ::= if_stmt
 stmt ::= while_stmt
 stmt ::= return_stmt
-
 expr_stmt ::= expr ";"
 expr_stmt ::= ";"
-
 while_stmt ::= "while" "(" expr ")" stmt
-
 if_stmt ::= "if" "(" expr ")" block else_stmt
-
 else_stmt ::= "else" block
 else_stmt ::= ''
-
 return_stmt ::= "return" return_stmt'
-
 return_stmt' ::= ";"
 return_stmt' ::= expr ";"
-
 expr ::= IDENT "=" expr
 expr ::= rval_or
-
 rval_or ::= and_exp rval_or'
-
 rval_or' ::= "||" and_exp rval_or'
 rval_or' ::= ''
-
 and_exp ::= equality_exp and_exp'
-
 and_exp' ::= "&&" equality_exp and_exp'
 and_exp' ::= ''
-
 equality_exp ::= relational_exp equality_exp'
-
 equality_exp' ::= "==" relational_exp equality_exp'
 equality_exp' ::= "!=" relational_exp equality_exp'
 equality_exp' ::= ''
-
 relational_exp ::= additive_exp relational_exp'
-
 relational_exp' ::= "<=" additive_exp relational_exp'
 relational_exp' ::= "<" additive_exp relational_exp'
 relational_exp' ::= ">=" additive_exp relational_exp'
 relational_exp' ::= ">" additive_exp relational_exp'
 relational_exp' ::= ''
-
 additive_exp ::= multiplicative_exp additive_exp'
-
 additive_exp' ::= "+" multiplicative_exp additive_exp'
 additive_exp' ::= "-" multiplicative_exp additive_exp'
 additive_exp' ::= ''
-
 multiplicative_exp ::= factor multiplicative_exp'
-
 multiplicative_exp' ::= "*" factor multiplicative_exp'
 multiplicative_exp' ::= "/" factor multiplicative_exp'
 multiplicative_exp' ::= "%" factor multiplicative_exp'
 multiplicative_exp' ::= ''
-
 factor ::= "-" factor
 factor ::= "!" factor
 factor ::= primary
-
 primary ::= "(" expr ")"
 primary ::= IDENT primary'
 primary ::= INT_LIT
 primary ::= FLOAT_LIT
 primary ::= BOOL_LIT
-
 primary' ::= "(" args ")"
 primary' ::= ''
-
 args ::= arg_list
 args ::= ''
-
 arg_list ::= expr arg_list'
-
 arg_list' ::= "," expr arg_list'
 arg_list' ::= ''
 \end{verbatim}
+}
 
 \section*{First Sets}
+{
+\small
 \begin{verbatim}
 FIRST(stmt_list') = { '(' 'while' ';' '{' 'if' '!' 'FLOAT_LIT' 'BOOL_LIT' 'IDENT' '''' '-' 'return' 'INT_LIT' }
 FIRST(relational_exp) = { '-' 'IDENT' 'INT_LIT' 'BOOL_LIT' '(' 'FLOAT_LIT' '!' }
@@ -227,8 +187,11 @@ FIRST(extern) = { 'extern' }
 FIRST(param_list) = { 'int' 'bool' 'float' }
 FIRST(additive_exp') = { '+' '''' '-' }
 \end{verbatim}
+}
 
 \section*{Follow Sets}
+{
+\small
 \begin{verbatim}
 FOLLOW(relational_exp) = { ';' ',' '||' '==' '&&' '!=' ')' }
 FOLLOW(args) = { ')' }
@@ -272,11 +235,11 @@ FOLLOW(primary') = { ',' '&&' '>' '>=' '==' '<=' '+' ')' '||' '-' '<' '%' '*' '/
 FOLLOW(param) = { ')' ',' }
 FOLLOW(extern_list') = { 'void' 'float' 'bool' 'int' }
 FOLLOW(var_type) = { 'IDENT' }
-FOLLOW(local_decl) = { 'INT_LIT' 'IDENT' 'return' '-' 'int' '}' 'FLOAT_LIT' 'bool' '!' 'if' '(' ';' 'float' 'BOOL_LIT' 'while' '{' }
+FOLLOW(local_decl) = { 'INT_LIT' 'IDENT' 'return' '-' 'int' '}' 'FLOAT_LIT' 'bool' '!' 'if' '(' ';' 'float' 'BOOL_LIT' 
+'while' '{' }
 FOLLOW(while_stmt) = { 'BOOL_LIT' 'INT_LIT' 'IDENT' '-' 'return' 'FLOAT_LIT' '}' '{' 'if' '!' '(' 'while' ';' }
 FOLLOW(extern) = { 'void' 'int' 'bool' 'float' 'extern' }    
 \end{verbatim}
-
-
+}
 
 \end{document}
