--- a/report.tex
+++ b/report.tex
@@ -3,11 +3,92 @@
 \usepackage{fancyhdr}
 \pagestyle{fancy}
 \usepackage{ dsfont }
-\usepackage[a4paper, margin=0.05in]{geometry}
-\rhead{2131917, Page~\thepage~of~\pageref{LastPage}}
+\usepackage[a4paper, margin=0.3in]{geometry}
+\usepackage{listings}
+\usepackage{color}
+\usepackage{xcolor}
+\lstset{
+    language=C++,                  % Set your language (you can change it as needed)
+    basicstyle=\ttfamily\small,     % The basic style of your code
+    keywordstyle=\color{blue},      % Keyword style
+    stringstyle=\color{red},        % String literal style
+    commentstyle=\color{green},     % Comment style
+    morecomment=[l][\color{magenta}]{\#},  % Directive style (like #include)
+    numbers=left,                   % Line numbers on left
+    numberstyle=\tiny\color{gray},  % Line number style
+    stepnumber=1,                   % Line number step
+    numbersep=5pt,                  % How far the line numbers are from the code
+    backgroundcolor=\color{white},  % Background color for code block
+    tabsize=2,                      % Tab size
+    showspaces=false,               % Show spaces adding particular underscores
+    showstringspaces=false,         % Underline spaces within strings only
+    showtabs=false,                 % Show tabs within strings adding particular underscores
+    frame=single,                   % Adds a frame around the code
+    captionpos=b,                   % Sets the caption-position to bottom
+    breaklines=true,                % Sets automatic line breaking
+    breakatwhitespace=false,        % Sets if automatic breaks should only happen at whitespace
+    escapeinside={\%*}{*)},         % If you want to add LaTeX within your code
+    morekeywords={*,...},           % If you want to add more keywords to the set
+}
+\newcommand{\code}[1]{\lstinline!#1!}
 
 \begin{document}
-\section*{Ds}
+\section*{Parser Design}
+My parser design is quite unique amongst others, and results in clean, concise, bug-free and resilient code. 
+\subsection*{Generating First and Follow sets programmatically}
+I parse the grammar from a string form (\code{grammarString.hpp}), create a data structure to hold the productions for each nonterminal, and then compute the first and follow sets. The sets are then used to make the parser predictive - I converted the grammar to only require a lookahead of 1 (in almost every production), and so could use the sets to check the next production to take or whether to take an epsilon production.\\\\
+Doing this programmatically avoided the inevitable errors of manual computation and ensures correctness and robustness of the compiler.
+\subsection*{The \code{nonterminal} function}
+I abstracted out the basic framework for a production into a function \code{nonTerminalInfo nonterminal(const std::string& name)}, which takes the name of the production to parse, and returns a map of strings to vectors of \code{ASTNode}s, for each nonterminal (and terminal) on the production's RHS. A \code{functionMap} is maintained so that the corresponding production function for a given nonterminal can be called dynamically. This removes the common and confusing spaghetti code involving \code{getNextToken()} and \code{putBackToken()} that would otherwise be present, resulting in very short, readable production functions. In fact \code{putBackToken()} was never even needed (and has been removed). As an example, here is the function for the \code{param} production:
+\begin{lstlisting}[]
+ptrVec<ASTNode> param() {
+    nonTerminalInfo info = nonterminal("param");
+    ptrVec<ASTNode> temp;
+    ptrVec<ASTNode> var_type = std::move(info["var_type"]);
+    ptrVec<ASTNode> ident = std::move(info["IDENT"]);
+    temp.push_back(std::make_unique<ParamAST>(var_type, ident));
+    return temp;
+}
+\end{lstlisting}
+Everything is moved around as a general \code{ptrVec<ASTNode> = std::vector<std::unique_ptr<ASTNode>>} to facilitate this approach, until moved into an \code{ASTNode}s constructor, where nodes are cast and extracted as needed. Multiple overloaded templates, \code{castToDerived<Base, Derived>} were created to facilitate clean and easy casting of nodes.
+\subsection*{Error handling}
+Yet another benefit of my abstracted \code{nonterminal} function was that it allowed for a sublime way of implementing comprehensive error handling for the parser. I build up a \code{expected} set of terminals (using the first sets) as I check for productions to use - if no production can be found matching the current token, I pass this expected set to \code{throwParserError(const std::unordered_set<std::string>& expected, std::string found)}, which prints a comprehensive error:
+\begin{lstlisting}[]
+Encountered an error on line 2 column 23.
+Expected one of: void int bool float extern 
+Found: eextern
+\end{lstlisting}
+and then exits the program.\\
+Similarly,
+\code{throwCodegenError} makes use of tokens stored with each \code{ASTNode} to print the exact line, column and lexeme where an error occurred.
+\section*{IR Generation}
+\subsubsection*{Casting and Type Checking}
+Following the spirit of delightful code, multiple helper functions were created to make this area clean and robust. 
+\begin{itemize}
+    \item \code{stringToPtrType} and \code{ptrToStringType} to convert between \code{std::string} and \code{Type*} representations of types
+    \item \code{Value* widenLtoR(Value* leftVal, Type* rightType)} which widens leftVal to rightType and returns the new corresponding \code{Value*}
+    \item Dually, \code{Value* narrowLtoR(Value* leftVal, Type* rightType)}
+\end{itemize}
+Widening and narrowing were implemented using IRBuilder instructions \code{CreateSIToFP}, \code{CreateZExt}, \code{CreateFPToSI}, and \code{CreateICmpNE}. Following the coursework guide, as well as the C99 specification, the following are the rules that I created for type checking and casting:
+\begin{itemize}
+    \item Types are widened as much as needed during arithmetic and logical operations
+    \item Types are only widened when passed into functions
+    \item Types are only widened when returned from functions
+    \item Types are widened or narrowed during variable assignment
+\end{itemize}
+
+
+
+
+
+
+
+
+
+
+
+
+
 \newpage
 \section*{Final Grammar}
 {
