--- a/report.bib
+++ b/report.bib
@@ -5,9 +5,23 @@
     year={2023}
 }
 
-@online{Valgrind,
-    title={Valgrind},
+@online{finnbar,
+    title={Fighting Dragons},
     author={},
-    url={https://valgrind.org/},
+    url={https://warwick.ac.uk/fac/sci/dcs/people/u1607856/fighting_dragons_how_to_use_llvm.pdf.org/},
+    year={2023}
+}
+
+@online{kal,
+    title={Kaleidescope},
+    author={},
+    url={https://llvm.org/docs/tutorial/MyFirstLanguageFrontend/index.html},
+    year={2023}
+}
+
+@online{princeton,
+    title={Princeton Parser Visualisation},
+    author={},
+    url={https://www.cs.princeton.edu/courses/archive/spring20/cos320/LL1/},
     year={2023}
 }
